--- a/src/templateToUpload/template1/index.html
+++ b/src/templateToUpload/template1/index.html
@@ -175,6 +175,7 @@
       float: right;
       color: #3c4858;
       border-bottom: 1px solid black;
+      font-weight: bold;
     }
 
     #vs-invoice .inv-notes {
@@ -306,7 +307,6 @@
         consectetur, adipisci velit...
       </div>
     </div>
-
   </invoice>
   
 </body>
